# frappe-better-select-control

./: MANIFEST.in  README.md  pyproject.toml  setup.py
frappe_better_select_control/: __init__.py  hooks.py  modules.txt
frappe_better_select_control/config/: desktop.py  docs.py
frappe_better_select_control/frappe_better_select_control/: __init__.py
frappe_better_select_control/public/: build.json
frappe_better_select_control/public/js/: better_select.bundle.js  better_select.js  better_select_v13.bundle.js  better_select_v13.js
