[project]
name = "frappe_better_select_control"
authors = [
    {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
]
description = "Frappe select control that supports options group."
keywords = ["frappe", "select", "better select"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: JavaScript"
]
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=13.0.0"
]

[project.urls]
Documentation = "https://github.com/kid1194/frappe-better-select-control"
Source = "https://github.com/kid1194/frappe-better-select-control"
